apply plugin: 'idea'
apply plugin: 'java'

buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        configurations.maybeCreate("pitest")
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.6.1")

        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.0'
        pitest 'org.pitest:pitest-junit5-plugin:0.9'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

ext {
    flyway_version = '8.1.0'
    junit5_version = '5.8.2'
    assertJ_version = '3.21.0'
    libs = [
        logging: [
            'ch.qos.logback:logback-classic:1.2.3'
            , 'ch.qos.logback:logback-core:1.2.3'
            , 'org.codehaus.janino:janino:2.7.8'
        ],
        assertJ: "org.assertj:assertj-core:${assertJ_version}"
    ]
}
ext['junit-jupiter.version'] = "${junit5_version}"

allprojects {
    apply plugin: 'java'

    group 'pp.ua.lifebook'
    // todo add checkstyle plugin
    repositories {
        mavenCentral()
    }
}

dependencies {
    implementation project(':lifebook-core')
    implementation project(':lifebook-db')
    implementation project(':lifebook-utils')

    implementation libs.logging
    implementation 'com.google.api-client:google-api-client:1.22.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.22.0'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev249-1.22.0'

    implementation files('lib/RockmanUtils.jar')

    testImplementation libs.assertJ
    testImplementation "org.junit.jupiter:junit-jupiter:${junit5_version}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit5_version}"
}

test {
    useJUnitPlatform()
}